Verschiedene Änderungen&Verbesserungen zum Beheben von Warnings